--- a/obs-wlroots/Cargo.toml
+++ b/obs-wlroots/Cargo.toml
@@ -10,6 +10,7 @@ edition = "2018"
 crate-type = ["dylib"]
 
 [dependencies]
+libc = "*"
 wayland-client = "0.23"
 
 [dependencies.wayland-protocols]
